<resources>
    <string name="app_name">TBC_Task_11</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="first_team">First Team</string>
    <string name="second_team">Second Team</string>
    <string name="zero">0</string>
    <string name="colon">:</string>
    <string name="football">Football</string>
    <string name="hockey">Hockey</string>
    <string name="invalid_input">Invalid input</string>
    <string name="refreshed">Refreshed</string>
</resources>